--- a/src/main/resources/plugin.xml
+++ b/src/main/resources/plugin.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin>
-    <extension id="ExportToCypher"
-               point="org.protege.editor.core.application.EditorKitMenuAction">
+    <extension id="ExportToCypher" point="org.protege.editor.core.application.EditorKitMenuAction">
         <name value="Export to Cypher"/>
-        <class value="ui.ExportToCypherAction"/>
+        <path value="org.protege.editor.owl.menu.tools/SlotG-A"/>
         <toolTip value="Export ontology to a text file which contains Cypher statements."/>
-        <path value="org.protege.editor.owl.menu.tools/SlotQ-A"/>
-        <editorKitId value="OWLEditorKit"/>
+        <class value="sbuciu.ui.ExportToCypherAction"/>
+        <editorKitId value="any"/>
     </extension>
 </plugin>
