--- a/pom.xml
+++ b/pom.xml
@@ -4,40 +4,40 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.acl</groupId>
+    <groupId>edu.stanford.protege</groupId>
     <artifactId>owl2cypher</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
+    <packaging>bundle</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>edu.stanford.protege</groupId>
             <artifactId>protege-editor-owl</artifactId>
-            <version>5.0.0</version>
+            <version>5.5.0</version>
         </dependency>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>2.0.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>2.0.3</version>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-cypher-dsl</artifactId>
+            <version>2022.8.1</version>
         </dependency>
     </dependencies>
 
     <build>
+
+        <resources>
+            <resource>
+                <!-- Use resource filtering to replace references to the artifactId in the plugin.xml file -->
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -58,11 +58,15 @@
                     <instructions>
                         <Bundle-Activator>org.protege.editor.owl.ProtegeOWL</Bundle-Activator>
                         <Bundle-SymbolicName>${project.artifactId};singleton:=true</Bundle-SymbolicName>
-                        <Bundle-Vendor>sbuciu</Bundle-Vendor>
+                        <Bundle-Vendor>edu.stanford.protege.sbuciu</Bundle-Vendor>
                         <Bundle-ClassPath>.</Bundle-ClassPath>
                         <Export-Package>
-                            sbuciu.*
+                            edu.stanford.protege.sbuciu.*
                         </Export-Package>
+                        <Import-Package>
+                            org.protege.editor.owl.*;version="5.0.0", <!-- equivalent to [5.0.0,infinity) -->
+                            *
+                        </Import-Package>
                         <Include-Resource>{maven-resources}</Include-Resource>
                         <executions>
                             <execution>
@@ -76,6 +80,26 @@
                     </instructions>
                 </configuration>
             </plugin>
+
+
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.felix</groupId>-->
+            <!--                <artifactId>maven-bundle-plugin</artifactId>-->
+            <!--                <version>3.0.0</version>-->
+            <!--                <extensions>true</extensions>-->
+            <!--                <configuration>-->
+            <!--                    <instructions>-->
+            <!--                        <Bundle-Activator>org.protege.editor.owl.ProtegeOWL</Bundle-Activator>-->
+            <!--                        <Bundle-ClassPath>.</Bundle-ClassPath>-->
+            <!--                        <Bundle-SymbolicName>${project.artifactId};singleton:=true</Bundle-SymbolicName>-->
+            <!--                        <Bundle-Vendor>edu.stanford.sbuciu</Bundle-Vendor>-->
+            <!--                        <Import-Package>-->
+            <!--                            org.protege.editor.owl.*;version="5.0.0", &lt;!&ndash; equivalent to [5.0.0,infinity) &ndash;&gt;-->
+            <!--                            *-->
+            <!--                        </Import-Package>-->
+            <!--                    </instructions>-->
+            <!--                </configuration>-->
+            <!--            </plugin>-->
 
             <plugin>
                 <artifactId>maven-eclipse-plugin</artifactId>
